tests/tooling/fixtures/native/execution/negative/switch_missing_lparen.objc3
module SwitchMissingLParenExec;

fn main() -> i32 {
  let x = 1;
  switch x) {
    case 1:
      return 1;
    default:
      return 0;
  }
}
